<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jimage_background"
    android:orientation="vertical">
    
    <com.zinc.libimage.view.view.JCropView
        android:id="@+id/crop_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="125dp"
        />

    <FrameLayout
        android:id="@+id/fl_detail_control_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/jimage_transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="125dp"
        >
        
    </FrameLayout>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_control_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:background="@color/jimage_child_control_color">
        
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/ll_control_type_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.zinc.libimage.view.view.ControlItemView
            android:id="@+id/crop_control_btn"
            style="@style/ControlItem"
            app:select_image="@mipmap/j_ic_crop"
            app:title="@string/jimage_crop"
            app:unselect_image="@mipmap/j_ic_crop"/>

        <com.zinc.libimage.view.view.ControlItemView
            android:id="@+id/filter_control_btn"
            style="@style/ControlItem"
            app:select_image="@mipmap/j_ic_color_filter"
            app:title="@string/jimage_filter"
            app:unselect_image="@mipmap/j_ic_color_filter"/>


        <com.zinc.libimage.view.view.ControlItemView
            android:id="@+id/toolbox_control_btn"
            style="@style/ControlItem"
            app:select_image="@mipmap/j_ic_toolbox"
            app:title="@string/jimage_toolbox"
            app:unselect_image="@mipmap/j_ic_toolbox"/>


    </LinearLayout>
    
</RelativeLayout>