<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/jimage_background">

    </android.support.v4.view.ViewPager>

    <include layout="@layout/j_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/jimage_primary_color">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/jimage_edit"
            android:textColor="@color/jimage_white"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            />

        <LinearLayout
            android:id="@+id/ll_original"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/jimage_original_pic"
                android:textColor="@color/jimage_white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/jimage_select"
                android:textColor="@color/jimage_white"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>