<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/j_toolbar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/jimage_background"
        >

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/jimage_primary_color"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_folder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/jimage_white"
                android:text="@string/jimage_all_image"
                android:gravity="center"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/j_ic_arrow"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_original"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >

            <CheckBox
                android:id="@+id/cb_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jimage_original_pic"
                android:textColor="@color/jimage_white"
                android:textSize="15sp"
                android:gravity="center"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/jimage_preview"
            android:textSize="15sp"
            android:textColor="@color/jimage_white"
            android:gravity="center"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            />

    </RelativeLayout>

</LinearLayout>